fix: reduce crampedness of sidebar top

--- a/packages/starlight-theme-obsidian/styles/common.css
+++ b/packages/starlight-theme-obsidian/styles/common.css
@@ -284,6 +284,10 @@
     top: 0;
     z-index: 1;
     background-color: var(--sl-color-bg-nav);
+
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
     padding-top: 1em;
 }
 
